+extract click handler logic into createObject, updateState,   updateUI   &  fix the alignment of the objects on the seesaw

--- a/css/style.css
+++ b/css/style.css
@@ -83,15 +83,21 @@ body{
     background-color: #A5CC6B;
    
 }
-#seesawObject {
-align-items: center;
+.seesawObject {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+    border-radius: 50%;
+    border: 1px solid #dfdbde8a;
 }
 #completeSeesaw{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 500px;
-    height: 200px;
+    height: 100%;
     justify-content: center;
 
 }
